[Bug 887279] Fix overlapping group chiclets at smaller screen sizes.

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -1200,7 +1200,7 @@ body#group-index {
             margin: 0 15px 15px 0;
             float: left;
             width: 30%;
-            @media (max-width: @breakMobileLandscape) { 
+            @media (max-width: @breakTablet) { 
                 width: 100%;
             }
             li {
